zabbix-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zabbix-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '30'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '1800'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '1800'
spec:
  tls:
    - hosts:
        - zabbix.lucasnet.int
        - zabbix.lucasnet.org
      secretName: lucasnet-tls
  rules:
    - host: zabbix.lucasnet.int
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zabbix-zabbix-web
                port:
                  number: 80
